# the_pit

./: README.md
boost_shared_memory_ipc/: description.txt  process  process.cc  queue_struct.h  starter.cc
displaylink/: CMakeLists.txt  standard_flags.cmake
displaylink/src/colourramp/: colour_ramp.cc  colour_ramp.h  display.cc  display.h  exception.h  main.cc  number_utils.cc  number_utils.h
displaylink/src/colourramp/tests/: colour_ramp_test.cc  number_utils_test.cc  test_main.cc
fibonacci/: fibo  fibonacci.h  main.cc  stack_check.h
project_euler/: problem009_prime_addition.cc  problem011_four_adjacent.cc  problem012_triangle_numbers.cc  problem013_add_fifty.cc  problem014_iterative_sequence.cc  problem016_two_power_thousand.cc  problem02_fibonacci.cc  problem03_largest_prime_factor.cc  problem04_palindrome.cc  problem06_square_difference.cc  problem07_10001prime.cc  problem08_consecutives.cc
strings_in_array/: description.txt  main.cc
